manifests/01_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openfaas
---
apiVersion: v1
kind: Namespace
metadata:
  name: openfaas-fn
---
apiVersion: v1
kind: Namespace
metadata:
  name: postgres
