manifests/07_postgres_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: postgres
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
